--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "mongoose": "^7.0.5",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
   }
 }
