--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "path": "^0.12.7",
     "xlsx": "^0.18.5",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17"
-  },
-  "devDependencies": {
+    "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
-  }
+  },
+  "devDependencies": {}
 }
